# basics_of_MB_project

./: .gitignore  Code_Filter_and Mapping.ipynb  README.md  control.py  filter.py  main.py  my_thymio.py  path_planning_A_star.ipynb  path_planning_A_star_LOCAL_1571.ipynb  project_notebook.ipynb  pyproject.toml  report-Copy1.ipynb  report.ipynb  report_1.ipynb  report_2.ipynb  saved_data.txt  set_thymio_leds.aesl  start_jupyter.bat
.ipynb_checkpoints/: Code_Filter_and Mapping-checkpoint.ipynb  Untitled-checkpoint.ipynb  path_planning_A_star-checkpoint.ipynb
src/: helpers.py  main.py
src/myThymio/: __init__.py  myThymio.py  thymio.py  thymio_constants.py
src/utils/: __init__.py  controller_utils.py  filter_utils.py  local_avoidance_utils.py  map_utils.py  sensor_utils.py  vision_utils.py
src/visuals/: __init__.py  display_utils.py  interface.py
