[tool.poetry]
name = "basics_of_mb_project"
version = "0.1.0"
description = ""
authors = ["naayem <vincentnaayem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.8.4"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pyserial = "^3.5"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
